# telefonkonyv

./: BusinessContact.h  CMakeLists.txt  Contact.cpp  Contact.h  PersonalContact.h  String.cpp  String.h  Telefonkonyv.cpp  Telefonkonyv.h  Vector.hpp  contact.txt  main.cpp
